[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scripts/POIDestroy.gd" id="1_destroy"]
[ext_resource type="PackedScene" path="res://scenes/EnemyTurret.tscn" id="2_turret"]
[ext_resource type="PackedScene" path="res://assets/environment/scifi-satelit-big.fbx" id="3_satellite"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_radar"]
height = 6.0
radius = 3.0

[sub_resource type="BoxMesh" id="BoxMesh_bar_bg"]
size = Vector3(3, 0.3, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_bar_fill"]
size = Vector3(3, 0.3, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_red"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_trigger"]
radius = 25.0
height = 5.0

[node name="POIDestroy" type="StaticBody3D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_destroy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
shape = SubResource("CylinderShape3D_radar")

[node name="VisualModel" parent="." instance=ExtResource("3_satellite")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Turret_Left" parent="." instance=ExtResource("2_turret")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="Turret_Right" parent="." instance=ExtResource("2_turret")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Turret_Front" parent="." instance=ExtResource("2_turret")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)

[node name="Turret_Back" parent="." instance=ExtResource("2_turret")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)
billboard = 1
text = "DESTROY RADAR"
font_size = 64

[node name="HealthBar" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.2, 0)
visible = false

[node name="BarBG" type="MeshInstance3D" parent="HealthBar"]
mesh = SubResource("BoxMesh_bar_bg")

[node name="BarFill" type="MeshInstance3D" parent="HealthBar"]
mesh = SubResource("BoxMesh_bar_fill")
surface_material_override/0 = SubResource("StandardMaterial3D_red")

[node name="TriggerArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerArea"]
shape = SubResource("CylinderShape3D_trigger")

[connection signal="body_entered" from="TriggerArea" to="." method="_on_area_3d_body_entered"]
